--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,31 @@
     <div class="row">
 
         <div class="col-md-8">
-            {% if latest_news %}
+
+            <form method="get" class="row g-2 align-items-center mb-4">
+    <div class="col-md-6">
+        {{ form.search.label_tag }}
+        {{ form.search }}
+    </div>
+    <div class="col-md-4">
+        {{ form.category.label_tag }}
+        {{ form.category }}
+    </div>
+    <div class="col-md-2">
+        <button type="submit" class="btn btn-primary w-100">Qidirish</button>
+    </div>
+</form>
+
+
+            {% if news_list %}
                 <h3>So‘nggi yangiliklar</h3>
 
-                {% for item in latest_news %}
+                {% for item in news_list %}
                 <div class="card mb-3">
                     <div class="card-body d-flex">
-                        <img src="{{ item.image.url }}" alt="Rasm" class="news-image me-3">
+                        {% if item.image %}
+                            <img src="{{ item.image.url }}" alt="Rasm" class="news-image me-3">
+                        {% endif %}
                         <div>
                             <h5 class="card-title">{{ item.title }}</h5>
                             <p class="card-text">{{ item.content|truncatewords:25 }}</p>
@@ -19,15 +37,17 @@
                     </div>
                 </div>
                 {% endfor %}
+            {% else %}
+                <p>Yangiliklar topilmadi.</p>
             {% endif %}
         </div>
 
         <div class="col-md-4">
             <h4>Kategoriyalar</h4>
-            <ul class="list-group mb-4" >
+            <ul class="list-group mb-4">
                 {% for category in categories %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{category.name}}
+                    <a href="?category={{ category.id }}">{{ category.name }}</a>
                     <span class="badge bg-primary rounded-pill">{{ category.news.count }}</span>
                 </li>
                 {% endfor %}
